# heimdall

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.devcontainer/: README.md  devcontainer.json
.github/workflows/: ci.yml
backend/: accounts.py  claude_logs.py  db.py  main.py  pricing.py  usage.py
docs/superpowers/plans/: 2026-07-19-keyring-storage.md  2026-07-19-sqlite-schema.md
docs/superpowers/specs/: 2026-07-19-keyring-storage-design.md  2026-07-19-sqlite-schema-design.md
frontend/: biome.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: AccountsCard.test.tsx  AccountsCard.tsx  BreakdownCard.test.tsx  BreakdownCard.tsx  Dashboard.tsx  KpiRow.test.tsx  KpiRow.tsx  PeriodPicker.test.tsx  PeriodPicker.tsx  RefreshButton.test.tsx  RefreshButton.tsx  TimelineChart.test.tsx  TimelineChart.tsx
frontend/src/hooks/: useAccounts.test.ts  useAccounts.ts  useBackendStatus.ts  useUsageSummary.test.ts  useUsageSummary.ts
frontend/src/lib/: api.ts  format.test.ts  format.ts  period.test.ts  period.ts  timeSeries.test.ts  timeSeries.ts
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
tests/: conftest.py  test_accounts.py  test_accounts_api.py  test_claude_logs.py  test_db.py  test_health.py  test_import_api.py  test_pricing.py  test_usage.py  test_usage_api.py
